tests/fiaas_deploy_daemon/bootstrap_e2e_expected/v2bootstrap-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app: specs-v2-data-examples-v2bootstrap
    fiaas/deployed_by: ""
    fiaas/deployment_id: "1"
    fiaas/version: 1.13.9-alpine
  name: specs-v2-data-examples-v2bootstrap
  namespace: default
  ownerReferences: []
  finalizers: []
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: specs-v2-data-examples-v2bootstrap
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/path: /internal-backstage/prometheus
        prometheus.io/port: "80"
        prometheus.io/scrape: "true"
      labels:
        app: specs-v2-data-examples-v2bootstrap
        fiaas/deployed_by: ""
        fiaas/deployment_id: "1"
        fiaas/status: active
        fiaas/version: 1.13.9-alpine
      name: specs-v2-data-examples-v2bootstrap
      namespace: default
      ownerReferences: []
      finalizers: []
    spec:
      initContainers: []
      automountServiceAccountToken: false
      containers:
      - command: []
        env:
        - name: ARTIFACT_NAME
          value: specs-v2-data-examples-v2bootstrap
        - name: CONSTRETTO_TAGS
          value: kubernetes
        - name: FIAAS_INFRASTRUCTURE
          value: diy
        - name: FIAAS_LIMITS_CPU
          valueFrom:
            resourceFieldRef:
              containerName: specs-v2-data-examples-v2bootstrap
              divisor: "1"
              resource: limits.cpu
        - name: FIAAS_LIMITS_MEMORY
          valueFrom:
            resourceFieldRef:
              containerName: specs-v2-data-examples-v2bootstrap
              divisor: "1"
              resource: limits.memory
        - name: FIAAS_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: FIAAS_POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: FIAAS_REQUESTS_CPU
          valueFrom:
            resourceFieldRef:
              containerName: specs-v2-data-examples-v2bootstrap
              divisor: "1"
              resource: requests.cpu
        - name: FIAAS_REQUESTS_MEMORY
          valueFrom:
            resourceFieldRef:
              containerName: specs-v2-data-examples-v2bootstrap
              divisor: "1"
              resource: requests.memory
        - name: IMAGE
          value: nginx:1.13.9-alpine
        - name: LOG_FORMAT
          value: plain
        - name: LOG_STDOUT
          value: "true"
        - name: VERSION
          value: 1.13.9-alpine
        envFrom:
        - configMapRef:
            name: specs-v2-data-examples-v2bootstrap
            optional: true
        image: nginx:1.13.9-alpine
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
            httpHeaders: []
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: specs-v2-data-examples-v2bootstrap
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
            httpHeaders: []
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /var/run/secrets/fiaas/
          name: specs-v2-data-examples-v2bootstrap-secret
          readOnly: true
        - mountPath: /var/run/config/fiaas/
          name: specs-v2-data-examples-v2bootstrap-config
          readOnly: true
        - mountPath: /tmp
          name: tmp
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      serviceAccountName: default
      imagePullSecrets: []
      terminationGracePeriodSeconds: 30
      volumes:
      - name: specs-v2-data-examples-v2bootstrap-secret
        secret:
          defaultMode: 420
          optional: true
          secretName: specs-v2-data-examples-v2bootstrap
      - configMap:
          defaultMode: 420
          name: specs-v2-data-examples-v2bootstrap
          optional: true
        name: specs-v2-data-examples-v2bootstrap-config
      - name: tmp
