tests/fiaas_deploy_daemon/bootstrap_e2e_expected/v2bootstrap-networkingv1-ingress.yml

# Copyright 2017-2019 The FIAAS Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    fiaas/expose: "true"
  labels:
    app: specs-v2-data-examples-v2bootstrap
    fiaas/deployed_by: ""
    fiaas/deployment_id: "1"
    fiaas/version: 1.13.9-alpine
  name: specs-v2-data-examples-v2bootstrap
  namespace: default
  ownerReferences:
    - apiVersion: fiaas.schibsted.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: Application
      name: specs-v2-data-examples-v2bootstrap
  finalizers: []
spec:
  tls: []
  rules:
  - host: bootstrap.example.com
    http:
      paths:
      - backend:
          service:
            name: specs-v2-data-examples-v2bootstrap
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
